// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`visual regression harness > compass page visual baseline 1`] = `
<section
  class="compass-page animate-fade-in-up"
>
  <header
    class="compass-hero ink-card"
  >
    <div>
      <p
        class="compass-eyebrow"
      >
        Temporal Compass
      </p>
      <h1>
        2082 Falgun 3
      </h1>
      <p
        class="compass-subtitle"
      >
        Chaturdashi
         · 
        krishna
      </p>
      <label
        class="ink-input compass-date-input"
      >
        <span>
          Date
        </span>
        <input
          type="date"
          value="2026-02-24"
        />
      </label>
    </div>
    <figure
      aria-label="Lunar progression"
      class="orbital-ring"
    >
      <svg
        role="img"
        viewBox="0 0 220 220"
      >
        <title>
          Lunar progression
        </title>
        <circle
          class="orbital-ring__track"
          cx="110"
          cy="110"
          r="88"
        />
        <circle
          class="orbital-ring__value"
          cx="110"
          cy="110"
          r="88"
          stroke-dasharray="552.9203070318035"
          stroke-dashoffset="143.75927982826892"
        />
      </svg>
      <figcaption>
        <strong>
          14
        </strong>
        <span>
          74
          %
        </span>
      </figcaption>
    </figure>
  </header>
  <div
    aria-live="polite"
    class="horizon-strip"
    role="status"
  >
    <p>
      <span>
        Sunrise
      </span>
       
      06:42 AM
    </p>
    <p>
      <span>
        Sunset
      </span>
       
      05:53 PM
    </p>
    <p>
      <span>
        Current Muhurta
      </span>
       
      Abhijit
    </p>
    <p>
      <span>
        Class
      </span>
       
      auspicious
    </p>
  </div>
  <section
    class="compass-signals"
  >
    <article
      class="ink-card"
    >
      <h3>
        Nakshatra
      </h3>
      <p>
        Shravana
      </p>
    </article>
    <article
      class="ink-card"
    >
      <h3>
        Yoga
      </h3>
      <p>
        Shubha
      </p>
    </article>
    <article
      class="ink-card"
    >
      <h3>
        Karana
      </h3>
      <p>
        Vishti
      </p>
    </article>
    <article
      class="ink-card"
    >
      <h3>
        Vaara
      </h3>
      <p>
        Sunday
      </p>
    </article>
  </section>
  <section
    class="compass-festivals ink-card"
  >
    <header>
      <h2>
        Today's Festivals
      </h2>
      <p>
        1
         active
      </p>
    </header>
    <div
      class="compass-festivals__list"
    >
      <button
        class="compass-festival-card"
        type="button"
      >
        <span>
          Dashain
        </span>
        <small>
          2026-10-20
        </small>
      </button>
    </div>
  </section>
</section>
`;

exports[`visual regression harness > explorer page visual baseline 1`] = `
<section
  class="explorer-page animate-fade-in-up"
>
  <header
    class="explorer-hero"
  >
    <h1
      class="text-hero"
    >
      Festival Explorer Ribbon
    </h1>
    <p
      class="explorer-hero__sub"
    >
      Browse observances continuously across months with quality-aware filters.
    </p>
  </header>
  <div
    class="explorer-filters"
  >
    <label
      class="ink-input explorer-control"
    >
      <span>
        From
      </span>
      <input
        type="date"
        value="2026-02-24"
      />
    </label>
    <label
      class="ink-input explorer-control"
    >
      <span>
        Window
      </span>
      <select>
        <option
          value="90"
        >
          90 days
        </option>
        <option
          value="180"
        >
          180 days
        </option>
        <option
          value="365"
        >
          365 days
        </option>
      </select>
    </label>
    <label
      class="ink-input explorer-control"
    >
      <span>
        Category
      </span>
      <select>
        <option
          value=""
        >
          All
        </option>
        <option
          value="national"
        >
          National
        </option>
        <option
          value="newari"
        >
          Newari
        </option>
        <option
          value="hindu"
        >
          Hindu
        </option>
        <option
          value="buddhist"
        >
          Buddhist
        </option>
        <option
          value="regional"
        >
          Regional
        </option>
      </select>
    </label>
    <label
      class="ink-input explorer-control explorer-control--wide"
    >
      <span>
        Region
      </span>
      <input
        placeholder="kathmandu_valley"
        value=""
      />
    </label>
  </div>
  <div
    aria-label="Festival timeline"
    class="timeline-ribbon"
  >
    <section
      class="timeline-month"
    >
      <header
        class="timeline-month__header sticky-month"
      >
        Kartik 2083
      </header>
      <ul
        class="timeline-month__list"
      >
        <li>
          <button
            class="timeline-card"
            type="button"
          >
            <div
              class="timeline-card__title-row"
            >
              <h3>
                Dashain
              </h3>
              <span
                aria-label="computed"
                class="quality-marker quality-marker--computed"
              />
            </div>
            <p
              class="timeline-card__meta"
            >
              2026-10-20
               → 
              2026-10-30
               · 
              national
            </p>
          </button>
        </li>
        <li>
          <button
            class="timeline-card"
            type="button"
          >
            <div
              class="timeline-card__title-row"
            >
              <h3>
                Tihar
              </h3>
              <span
                aria-label="computed"
                class="quality-marker quality-marker--computed"
              />
            </div>
            <p
              class="timeline-card__meta"
            >
              2026-11-07
               → 
              2026-11-11
               · 
              national
            </p>
          </button>
        </li>
      </ul>
    </section>
  </div>
</section>
`;

exports[`visual regression harness > feeds page visual baseline 1`] = `
<section
  class="feeds-page animate-fade-in-up"
>
  <header
    class="feeds-hero"
  >
    <h1
      class="text-hero"
    >
      Calendar Feeds
    </h1>
    <p
      class="feeds-hero__sub"
    >
      Subscribe from Google Calendar, Apple Calendar, or Outlook
    </p>
    <div
      class="feeds-hero__controls"
    >
      <label
        class="ink-input"
      >
        <span>
          Years
        </span>
        <select>
          <option
            value="1"
          >
            1
          </option>
          <option
            value="2"
          >
            2
          </option>
          <option
            value="3"
          >
            3
          </option>
          <option
            value="4"
          >
            4
          </option>
          <option
            value="5"
          >
            5
          </option>
        </select>
      </label>
      <label
        class="ink-input"
      >
        <span>
          Language
        </span>
        <select>
          <option
            value="en"
          >
            English
          </option>
          <option
            value="ne"
          >
            Nepali
          </option>
        </select>
      </label>
    </div>
  </header>
  <section
    class="feeds-grid stagger-children"
  >
    <article
      class="ink-card ink-card--gold feed-card"
    >
      <h3>
        All Festivals
      </h3>
      <p
        class="feed-card__desc"
      >
        Every festival computed by the engine
      </p>
      <div
        class="feed-card__url"
      >
        <code>
          http://localhost:8000/v3/api/feeds/all.ics?years=2&lang=en
        </code>
      </div>
      <div
        class="feed-card__actions"
      >
        <a
          class="btn btn-primary btn-sm"
          href="http://localhost:8000/v3/api/feeds/all.ics?years=2&lang=en"
          rel="noreferrer"
          target="_blank"
        >
          Open Feed
        </a>
        <button
          class="btn btn-secondary btn-sm"
        >
          Copy Link
        </button>
      </div>
    </article>
    <article
      class="ink-card ink-card--vermillion feed-card"
    >
      <h3>
        National Holidays
      </h3>
      <p
        class="feed-card__desc"
      >
        Official government-declared holidays
      </p>
      <div
        class="feed-card__url"
      >
        <code>
          http://localhost:8000/v3/api/feeds/national.ics?years=2&lang=en
        </code>
      </div>
      <div
        class="feed-card__actions"
      >
        <a
          class="btn btn-primary btn-sm"
          href="http://localhost:8000/v3/api/feeds/national.ics?years=2&lang=en"
          rel="noreferrer"
          target="_blank"
        >
          Open Feed
        </a>
        <button
          class="btn btn-secondary btn-sm"
        >
          Copy Link
        </button>
      </div>
    </article>
    <article
      class="ink-card ink-card--amber feed-card"
    >
      <h3>
        Newari Festivals
      </h3>
      <p
        class="feed-card__desc"
      >
        Traditional Newar community observances
      </p>
      <div
        class="feed-card__url"
      >
        <code>
          http://localhost:8000/v3/api/feeds/newari.ics?years=2&lang=en
        </code>
      </div>
      <div
        class="feed-card__actions"
      >
        <a
          class="btn btn-primary btn-sm"
          href="http://localhost:8000/v3/api/feeds/newari.ics?years=2&lang=en"
          rel="noreferrer"
          target="_blank"
        >
          Open Feed
        </a>
        <button
          class="btn btn-secondary btn-sm"
        >
          Copy Link
        </button>
      </div>
    </article>
  </section>
  <section
    class="ink-card feeds-custom"
  >
    <div
      class="feeds-custom__header"
    >
      <h3>
        Custom Festival Feed
      </h3>
      <p>
        Select specific festivals to create a focused calendar feed.
      </p>
    </div>
    <div
      class="feeds-custom__search ink-input"
    >
      <span>
        Search
      </span>
      <input
        placeholder="Dashain, Teej, Shivaratri..."
        type="search"
        value=""
      />
    </div>
    <div
      class="feeds-picker"
    >
      <label
        class="feeds-picker__item"
      >
        <input
          type="checkbox"
        />
        <span>
          Dashain
        </span>
      </label>
      <label
        class="feeds-picker__item"
      >
        <input
          type="checkbox"
        />
        <span>
          Tihar
        </span>
      </label>
    </div>
    <div
      class="feeds-custom__output"
    >
      <p>
        <strong>
          Selected:
        </strong>
         
        0
         festivals
      </p>
      <p
        class="feeds-custom__hint"
      >
        Select at least one festival above
      </p>
    </div>
  </section>
</section>
`;

exports[`visual regression harness > kundali page visual baseline 1`] = `
<section
  class="kundali-page animate-fade-in-up"
>
  <form
    class="kundali-controls ink-card"
  >
    <label
      class="ink-input"
    >
      <span>
        Birth Date & Time
      </span>
      <input
        required=""
        type="datetime-local"
        value="2026-02-18T06:30"
      />
    </label>
    <label
      class="ink-input"
    >
      <span>
        Latitude
      </span>
      <input
        value="27.7172"
      />
    </label>
    <label
      class="ink-input"
    >
      <span>
        Longitude
      </span>
      <input
        value="85.324"
      />
    </label>
    <label
      class="ink-input"
    >
      <span>
        Timezone
      </span>
      <input
        value="Asia/Kathmandu"
      />
    </label>
    <button
      class="btn btn-primary"
      type="submit"
    >
      Generate
    </button>
  </form>
  <section
    class="kundali-hero-row"
  >
    <article
      class="ink-card ink-card--saffron kundali-rashi-card"
    >
      <h3>
        Moon Rashi
      </h3>
      <p>
        —
      </p>
      <small>
        Capricorn
      </small>
    </article>
    <article
      class="ink-card ink-card--gold kundali-rashi-card"
    >
      <h3>
        Lagna
      </h3>
      <p>
        Meena
      </p>
      <small>
        Pisces
      </small>
    </article>
    <article
      class="ink-card kundali-rashi-card"
    >
      <h3>
        Signals
      </h3>
      <p>
        1
         yoga · 
        1
         dosha
      </p>
      <small>
        1
         aspects
      </small>
    </article>
  </section>
  <section
    class="kundali-graph-layout"
  >
    <div
      class="ink-card kundali-graph-shell"
    >
      <figure
        aria-label="Interactive kundali graph"
        class="kundali-graph"
      >
        <svg
          role="img"
          viewBox="0 0 400 400"
        >
          <title>
            Kundali Graph
          </title>
        </svg>
        <figcaption>
          <p>
            Select a house or graha to focus related aspect links.
          </p>
        </figcaption>
      </figure>
    </div>
    <aside
      class="ink-card kundali-insight-pane"
    >
      <h3>
        Interpretation Sidebar
      </h3>
      <div
        class="kundali-insight-list"
      >
        <article
          class="kundali-insight-item"
        >
          <h4>
            Mars-Venus link
          </h4>
          <p>
            Supportive trinal relation in this profile.
          </p>
        </article>
      </div>
    </aside>
  </section>
  <section
    class="ink-card kundali-table-wrap"
  >
    <h3>
      Graha Table
    </h3>
    <table
      class="ink-table"
    >
      <thead>
        <tr>
          <th>
            Graha
          </th>
          <th>
            Rashi
          </th>
          <th>
            Longitude
          </th>
          <th>
            Dignity
          </th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <td>
            Mars
          </td>
          <td>
            Cancer
          </td>
          <td>
            102.4
            °
          </td>
          <td>
            neutral
          </td>
        </tr>
        <tr>
          <td>
            Sun
          </td>
          <td>
            Aquarius
          </td>
          <td>
            332.1
            °
          </td>
          <td>
            neutral
          </td>
        </tr>
        <tr>
          <td>
            Moon
          </td>
          <td>
            Capricorn
          </td>
          <td>
            289.3
            °
          </td>
          <td>
            neutral
          </td>
        </tr>
      </tbody>
    </table>
  </section>
  <section
    aria-label="Glossary"
    class="knowledge-panel ink-card kundali-knowledge"
  >
    <header
      class="knowledge-panel__header"
    >
      <p
        class="knowledge-panel__eyebrow"
      >
        Explainability
      </p>
      <h2>
        Glossary
      </h2>
      <p
        class="knowledge-panel__intro"
      >
        Reference glossary payload for visual snapshots.
      </p>
    </header>
    <div
      class="knowledge-panel__sections"
    >
      <details
        class="knowledge-section"
        open=""
      >
        <summary>
          <span
            class="knowledge-section__title"
          >
            Core Terms
          </span>
        </summary>
        <ul
          class="knowledge-terms"
        >
          <li
            class="knowledge-term"
          >
            <h3>
              Tithi
            </h3>
            <p>
              Lunar day
            </p>
            <p
              class="knowledge-term__why"
            >
              <strong>
                Why it matters:
              </strong>
               
              Used to determine observance timing.
            </p>
          </li>
        </ul>
      </details>
    </div>
  </section>
</section>
`;

exports[`visual regression harness > muhurta page visual baseline 1`] = `
<section
  class="muhurta-page animate-fade-in-up"
>
  <form
    class="muhurta-controls ink-card"
  >
    <label
      class="ink-input"
    >
      <span>
        Date
      </span>
      <input
        required=""
        type="date"
        value="2026-02-24"
      />
    </label>
    <label
      class="ink-input"
    >
      <span>
        Ceremony
      </span>
      <select>
        <option
          value="general"
        >
          General
        </option>
        <option
          value="vivah"
        >
          Wedding
        </option>
        <option
          value="griha_pravesh"
        >
          Griha Pravesh
        </option>
        <option
          value="travel"
        >
          Travel
        </option>
        <option
          value="upanayana"
        >
          Upanayana
        </option>
      </select>
    </label>
    <label
      class="ink-input"
    >
      <span>
        Assumption Set
      </span>
      <select>
        <option
          value="np-mainstream-v2"
        >
          NP Mainstream
        </option>
        <option
          value="diaspora-practical-v2"
        >
          Diaspora Practical
        </option>
      </select>
    </label>
    <label
      class="ink-input"
    >
      <span>
        Timezone
      </span>
      <input
        value="Asia/Kathmandu"
      />
    </label>
  </form>
  <section
    class="ink-card muhurta-hero-grid"
  >
    <article>
      <h3>
        Best Window
      </h3>
      <p>
        Abhijit Muhurta
      </p>
      <small>
        Score: 
        88
      </small>
    </article>
    <article>
      <h3>
        Rahu Kalam
      </h3>
      <p>
        04:12 PM - 05:00 PM
      </p>
      <small>
        Segment 
        8
      </small>
    </article>
    <article>
      <h3>
        Tara Bala
      </h3>
      <p>
        good
      </p>
      <small>
        Sampat
      </small>
    </article>
  </section>
  <section
    class="ink-card muhurta-heatmap-shell"
  >
    <h3>
      24h Muhurta Heatmap
    </h3>
    <div
      aria-label="Muhurta heatmap"
      class="muhurta-heatmap"
      role="list"
    >
      <button
        aria-pressed="true"
        class="muhurta-heatmap__block muhurta-heatmap__block--good is-selected"
        role="listitem"
        type="button"
      >
        <span
          class="muhurta-heatmap__name"
        >
          Abhijit Muhurta
        </span>
        <span
          class="muhurta-heatmap__time"
        >
          11:48 AM
          –
          12:36 PM
        </span>
        <span
          class="muhurta-heatmap__score"
        >
          88
        </span>
      </button>
    </div>
    <div
      class="muhurta-selected-details"
    >
      <h4>
        Abhijit Muhurta
      </h4>
      <p>
        Ranked with hora/chaughadia/tara-bala constraints.
      </p>
      <p>
        <strong>
          Reason codes:
        </strong>
         
        hora_supportive · tara_good
      </p>
      <p>
        <strong>
          Confidence score:
        </strong>
         
        0.91
      </p>
    </div>
  </section>
  <section
    aria-label="Glossary"
    class="knowledge-panel ink-card muhurta-knowledge"
  >
    <header
      class="knowledge-panel__header"
    >
      <p
        class="knowledge-panel__eyebrow"
      >
        Explainability
      </p>
      <h2>
        Glossary
      </h2>
      <p
        class="knowledge-panel__intro"
      >
        Reference glossary payload for visual snapshots.
      </p>
    </header>
    <div
      class="knowledge-panel__sections"
    >
      <details
        class="knowledge-section"
        open=""
      >
        <summary>
          <span
            class="knowledge-section__title"
          >
            Core Terms
          </span>
        </summary>
        <ul
          class="knowledge-terms"
        >
          <li
            class="knowledge-term"
          >
            <h3>
              Tithi
            </h3>
            <p>
              Lunar day
            </p>
            <p
              class="knowledge-term__why"
            >
              <strong>
                Why it matters:
              </strong>
               
              Used to determine observance timing.
            </p>
          </li>
        </ul>
      </details>
    </div>
  </section>
</section>
`;

exports[`visual regression harness > panchanga page visual baseline 1`] = `
<section
  class="panchanga-page animate-fade-in-up"
>
  <header
    class="panchanga-hero"
  >
    <div
      class="panchanga-hero__left"
    >
      <h1
        class="text-hero"
      >
        2082
         
        Falgun
         
        3
      </h1>
      <p
        class="panchanga-hero__date"
      >
        Tuesday, February 24, 2026
      </p>
      <label
        class="panchanga-hero__picker ink-input"
      >
        <span>
          Date
        </span>
        <input
          id="panchanga-date"
          type="date"
          value="2026-02-24"
        />
      </label>
    </div>
    <div
      class="panchanga-hero__right"
    >
      <div
        aria-label="Lunar phase view"
        class="moon-phase"
      >
        <div
          class="moon-phase__orb"
        >
          <div
            class="moon-phase__shadow"
            style="clip-path: inset(0 86.66666666666667% 0 0); opacity: 1;"
          />
        </div>
        <span
          class="moon-phase__label"
        >
          Shukla
           Paksha
        </span>
      </div>
    </div>
  </header>
  <section
    class="panchanga-festivals animate-fade-in-up"
  >
    <h2
      class="panchanga-festivals__title"
    >
      Festivals on this day
    </h2>
    <div
      class="panchanga-festivals__chips"
    >
      <button
        class="festival-chip"
      >
        <span
          class="festival-chip__name"
        >
          Dashain
        </span>
      </button>
    </div>
  </section>
  <section
    class="panchanga-cards stagger-children"
  >
    <article
      class="ink-card ink-card--vermillion panchanga-card"
    >
      <h3>
        Tithi
      </h3>
      <p
        class="panchanga-card__value"
      >
        Chaturdashi
      </p>
      <p
        class="panchanga-card__meta"
      >
        #
        14
         · 
        krishna
      </p>
    </article>
    <article
      class="ink-card ink-card--saffron panchanga-card"
    >
      <h3>
        Nakshatra
      </h3>
      <p
        class="panchanga-card__value"
      >
        Shravana
      </p>
      <p
        class="panchanga-card__meta"
      >
        Pada 
        1
      </p>
    </article>
    <article
      class="ink-card ink-card--gold panchanga-card"
    >
      <h3>
        Yoga
      </h3>
      <p
        class="panchanga-card__value"
      >
        Shubha
      </p>
      <p
        class="panchanga-card__meta"
      >
        #
        9
      </p>
    </article>
    <article
      class="ink-card ink-card--jade panchanga-card"
    >
      <h3>
        Karana
      </h3>
      <p
        class="panchanga-card__value"
      >
        Vishti
      </p>
      <p
        class="panchanga-card__meta"
      >
        #
        7
      </p>
    </article>
    <article
      class="ink-card ink-card--amber panchanga-card"
    >
      <h3>
        Vaara
      </h3>
      <p
        class="panchanga-card__value"
      >
        Sunday
      </p>
      <p
        class="panchanga-card__meta"
      >
        Ravivara
      </p>
    </article>
  </section>
  <section
    aria-label="Glossary"
    class="knowledge-panel ink-card panchanga-knowledge"
  >
    <header
      class="knowledge-panel__header"
    >
      <p
        class="knowledge-panel__eyebrow"
      >
        Explainability
      </p>
      <h2>
        Glossary
      </h2>
      <p
        class="knowledge-panel__intro"
      >
        Reference glossary payload for visual snapshots.
      </p>
    </header>
    <div
      class="knowledge-panel__sections"
    >
      <details
        class="knowledge-section"
        open=""
      >
        <summary>
          <span
            class="knowledge-section__title"
          >
            Core Terms
          </span>
        </summary>
        <ul
          class="knowledge-terms"
        >
          <li
            class="knowledge-term"
          >
            <h3>
              Tithi
            </h3>
            <p>
              Lunar day
            </p>
            <p
              class="knowledge-term__why"
            >
              <strong>
                Why it matters:
              </strong>
               
              Used to determine observance timing.
            </p>
          </li>
        </ul>
      </details>
    </div>
  </section>
  <section
    class="ink-card panchanga-details-card"
  >
    <p>
      <strong>
        Confidence:
      </strong>
       
      astronomical
    </p>
    <p>
      <strong>
        Tithi Method:
      </strong>
       
      ephemeris_udaya
    </p>
  </section>
</section>
`;

exports[`visual regression harness > personal page visual baseline 1`] = `
<section
  class="personal-page animate-fade-in-up"
>
  <form
    class="personal-inputs ink-card"
  >
    <label
      class="ink-input"
    >
      <span>
        Date
      </span>
      <input
        required=""
        type="date"
        value="2026-02-24"
      />
    </label>
    <label
      class="ink-input"
    >
      <span>
        Latitude
      </span>
      <input
        value="27.7172"
      />
    </label>
    <label
      class="ink-input"
    >
      <span>
        Longitude
      </span>
      <input
        value="85.324"
      />
    </label>
    <label
      class="ink-input"
    >
      <span>
        Timezone
      </span>
      <input
        value="Asia/Kathmandu"
      />
    </label>
    <button
      class="btn btn-primary personal-submit"
      type="submit"
    >
      Compute
    </button>
  </form>
  <header
    class="personal-hero"
  >
    <div>
      <h1
        class="text-hero"
      >
        2082
         
        Falgun
         
        3
      </h1>
      <p
        class="personal-hero__sub"
      >
        Asia/Kathmandu
         · 
        27.7172
        °N, 
        85.324
        °E
      </p>
      <p
        class="personal-hero__delta"
      >
        Local sunrise delta vs Kathmandu baseline: 
        +2 min
      </p>
    </div>
  </header>
  <section
    class="personal-festivals animate-fade-in-up"
  >
    <h2
      class="personal-festivals__title"
    >
      Festivals on this day
    </h2>
    <div
      class="personal-festivals__chips"
    >
      <button
        class="festival-chip"
      >
        <span
          class="festival-chip__name"
        >
          Dashain
        </span>
      </button>
    </div>
  </section>
  <section
    class="personal-cards-grid stagger-children"
  >
    <article
      class="ink-card ink-card--vermillion panchanga-card"
    >
      <h3>
        Tithi
      </h3>
      <p
        class="panchanga-card__value"
      >
        Chaturdashi
      </p>
      <p
        class="panchanga-card__meta"
      >
        #
        14
         · 
        krishna
      </p>
    </article>
    <article
      class="ink-card ink-card--saffron panchanga-card"
    >
      <h3>
        Nakshatra
      </h3>
      <p
        class="panchanga-card__value"
      >
        Shravana
      </p>
      <p
        class="panchanga-card__meta"
      >
        #
        22
      </p>
    </article>
    <article
      class="ink-card ink-card--gold panchanga-card"
    >
      <h3>
        Yoga
      </h3>
      <p
        class="panchanga-card__value"
      >
        Shubha
      </p>
      <p
        class="panchanga-card__meta"
      >
        #
        9
      </p>
    </article>
    <article
      class="ink-card ink-card--jade panchanga-card"
    >
      <h3>
        Karana
      </h3>
      <p
        class="panchanga-card__value"
      >
        Vishti
      </p>
      <p
        class="panchanga-card__meta"
      >
        #
        7
      </p>
    </article>
    <article
      class="ink-card ink-card--amber panchanga-card"
    >
      <h3>
        Vaara
      </h3>
      <p
        class="panchanga-card__value"
      >
        Sunday
      </p>
      <p
        class="panchanga-card__meta"
      >
        Ravivara
      </p>
    </article>
  </section>
  <section
    aria-label="How Personal Panchanga Is Different"
    class="knowledge-panel ink-card personal-knowledge"
  >
    <header
      class="knowledge-panel__header"
    >
      <p
        class="knowledge-panel__eyebrow"
      >
        Explainability
      </p>
      <h2>
        How Personal Panchanga Is Different
      </h2>
      <p
        class="knowledge-panel__intro"
      >
        Personal Panchanga recalculates the day using your location and timezone, so sunrise-based results match your city, not only Kathmandu.
      </p>
    </header>
    <div
      class="knowledge-panel__sections"
    >
      <details
        class="knowledge-section"
        open=""
      >
        <summary>
          <span
            class="knowledge-section__title"
          >
            Inputs That Change the Result
          </span>
        </summary>
        <ul
          class="knowledge-terms"
        >
          <li
            class="knowledge-term"
          >
            <h3>
              Latitude / Longitude
            </h3>
            <p>
              Your physical location for sunrise and local sky calculations.
            </p>
            <p
              class="knowledge-term__why"
            >
              <strong>
                Why it matters:
              </strong>
               
              A tithi boundary can shift when sunrise changes by location.
            </p>
          </li>
          <li
            class="knowledge-term"
          >
            <h3>
              Timezone
            </h3>
            <p>
              Local civil time context for date boundaries and display.
            </p>
            <p
              class="knowledge-term__why"
            >
              <strong>
                Why it matters:
              </strong>
               
              Diaspora users get date labels aligned with their local day.
            </p>
          </li>
          <li
            class="knowledge-term"
          >
            <h3>
              Method Profile
            </h3>
            <p>
              Named ruleset used to compute this personal output.
            </p>
            <p
              class="knowledge-term__why"
            >
              <strong>
                Why it matters:
              </strong>
               
              Makes results auditable and consistent across clients.
            </p>
          </li>
        </ul>
      </details>
      <details
        class="knowledge-section"
      >
        <summary>
          <span
            class="knowledge-section__title"
          >
            The 5 Limbs of Panchanga
          </span>
          <span
            class="knowledge-section__description"
          >
            Each day is described using five markers:
          </span>
        </summary>
        <ul
          class="knowledge-terms"
        >
          <li
            class="knowledge-term"
          >
            <h3>
              Tithi
            </h3>
            <p>
              The lunar day based on Moon-Sun angle (1 to 30).
            </p>
            <p
              class="knowledge-term__why"
            >
              <strong>
                Why it matters:
              </strong>
               
              Most festivals and fasts are tied to a specific tithi at sunrise.
            </p>
          </li>
          <li
            class="knowledge-term"
          >
            <h3>
              Nakshatra
            </h3>
            <p>
              The Moon's star sector among 27 nakshatras.
            </p>
            <p
              class="knowledge-term__why"
            >
              <strong>
                Why it matters:
              </strong>
               
              Used in puja planning, naming traditions, and muhurta filtering.
            </p>
          </li>
          <li
            class="knowledge-term"
          >
            <h3>
              Yoga
            </h3>
            <p>
              A combined Sun-Moon angle classification among 27 yogas.
            </p>
            <p
              class="knowledge-term__why"
            >
              <strong>
                Why it matters:
              </strong>
               
              Traditionally used to classify general day quality.
            </p>
          </li>
          <li
            class="knowledge-term"
          >
            <h3>
              Karana
            </h3>
            <p>
              Half of a tithi; a finer time unit for action windows.
            </p>
            <p
              class="knowledge-term__why"
            >
              <strong>
                Why it matters:
              </strong>
               
              Useful when selecting specific periods within a day.
            </p>
          </li>
          <li
            class="knowledge-term"
          >
            <h3>
              Vaara
            </h3>
            <p>
              Weekday (Ravivara, Somavara, etc.).
            </p>
            <p
              class="knowledge-term__why"
            >
              <strong>
                Why it matters:
              </strong>
               
              Many rituals have weekday preferences or restrictions.
            </p>
          </li>
        </ul>
      </details>
    </div>
  </section>
</section>
`;
